--- a/1.15.3/Dockerfile
+++ b/1.15.3/Dockerfile
@@ -1,10 +1,10 @@
 #集成nginx,openssl,rtmp,ffmpeg等常用功能。
-#如果需要集成了acme，可参考以下方式使nginx支撑ssl
+#如果需要集成了acme，可参考以下方式使nginx支撑ssl。注意：需要启动cron服务自动更新证书，否则60天后将失效
 #curl  https://get.acme.sh | sh
 #alias acme.sh=~/.acme.sh/acme.sh
 #mkdir /etc/nginx/ssl
 #acme.sh --issue -d domain.me -d sub.domain.me --webroot /usr/share/nginx/html/
-#acme.sh --installcert -d domain.com --key-file /etc/nginx/ssl/domain.com.key --fullchain-file /etc/nginx/ssl/fullchain.cer
+#acme.sh --installcert -d domain.com --key-file /etc/nginx/ssl/domain.com.key --fullchain-file /etc/nginx/ssl/fullchain.cer --reloadcmd "service nginx force-reload"
 FROM alpine:3.7
 MAINTAINER djin(273218159@qq.com)
 
