--- a/1.15.3/nginx.vh.default.conf
+++ b/1.15.3/nginx.vh.default.conf
@@ -2,6 +2,7 @@ server {
     listen       80;
     server_name  localhost;
 
+    #rewrite ^(.*)$ https://$host$1 permanent;
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
