优化nginx默认参数

--- a/1.15.3/nginx.conf
+++ b/1.15.3/nginx.conf
@@ -1,17 +1,16 @@
-
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  32767;
 }
 
 rtmp {
-    access_log /var/log/nginx/rtmp.log;
+    access_log /var/log/nginx/access.log main;
     include /etc/nginx/conf.d/rtmp/*.conf;
 }
 
