--- a/1.15.3/ssl.conf
+++ b/1.15.3/ssl.conf
@@ -1,6 +1,6 @@
 #server {
 #    listen 443 ssl;
-#    ssl_certificate /etc/nginx/ssl/fullchain.cer;
+#    ssl_certificate /etc/nginx/ssl/{domain}.cer;
 #    ssl_certificate_key /etc/nginx/ssl/{domain}.key;
 
 #    location / {
