--- a/1.15.3/nginx.conf
+++ b/1.15.3/nginx.conf
@@ -10,7 +10,7 @@ events {
 }
 
 rtmp {
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log;
     include /etc/nginx/conf.d/rtmp/*.conf;
 }
 
