--- a/1.15.3/nginx.conf
+++ b/1.15.3/nginx.conf
@@ -27,9 +27,14 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    keepalive_timeout  3;
 
-    #gzip  on;
+    gzip on; #open gzip
+    gzip_min_length 1k; #do not gzip when less than 1kb
+    gzip_comp_level 9; #level 1-9
+    gzip_types text/plain application/javascript application/x-javascript text/javascript text/xml text/css;  #gzip types
+    gzip_disable "MSIE [1-6]\.";  #disabled rule; ie6 not support
+    gzip_vary on;
 
     include /etc/nginx/conf.d/http/*.conf;
 }
