--- a/1.15.3/nginx.vh.default.conf
+++ b/1.15.3/nginx.vh.default.conf
@@ -24,6 +24,12 @@ server {
     #
     #location ~ \.php$ {
     #    proxy_pass   http://127.0.0.1;
+    #    proxy_set_header Host $http_host;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header X-Forwarded-Proto $scheme;
+    #    client_max_body_size 1024m;
+    #    proxy_set_header Upgrade $http_upgrade; #websocket
+    #    proxy_set_header Connection Upgrade; #websocket
     #}
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
