--- a/1.15.3/nginx.conf
+++ b/1.15.3/nginx.conf
@@ -28,6 +28,7 @@ http {
     #tcp_nopush     on;
 
     keepalive_timeout  3;
+    server_tokens off;
 
     gzip on; #open gzip
     gzip_min_length 1k; #do not gzip when less than 1kb
