--- a/1.15.3/nginx.vh.default.conf
+++ b/1.15.3/nginx.vh.default.conf
@@ -5,6 +5,13 @@ server {
     #rewrite ^(.*)$ https://$host$1 permanent;
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
+    
+    #buffer
+    client_body_buffer_size 128K;
+    client_max_body_size 8m;
+    proxy_buffering off;
+    proxy_buffer_size 128k;
+    proxy_buffers 10 128k;
 
     location / {
         root   /usr/share/nginx/html;
