--- a/1.15.3/ssl.conf
+++ b/1.15.3/ssl.conf
@@ -3,6 +3,13 @@
 #    ssl_certificate /etc/nginx/ssl/{domain}.cer;
 #    ssl_certificate_key /etc/nginx/ssl/{domain}.key;
 
+    #buffer
+#    client_body_buffer_size 128K;
+#    client_max_body_size 8m;
+#    proxy_buffering off;
+#    proxy_buffer_size 128k;
+#    proxy_buffers 10 128k;
+
 #    location / {
 #        root   /usr/share/nginx/html;
 #        index  index.html index.htm;
